Fix line height that is too tall on a twit

--- a/c/grid.css
+++ b/c/grid.css
@@ -1227,6 +1227,7 @@ width:100%;
 {
 padding:0;
 margin:0 10px;
+line-height:1em;
 }
 .twit .t .slant {
 left:14px;
